--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -50,6 +50,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      working-directory: admin_panel
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
