--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -50,7 +50,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-        working-directory: admin_panel
+      with:
+        repository: thawzin-11/ci-cd-testing/zay_chin_clone_app/admin_panel
+          
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
