--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -46,12 +46,13 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     # environment: production
+    defaults:
+      run:
+        working-directory: admin_panel
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-      with:
-        repository: thawzin-11/ci-cd-testing/zay_chin_clone_app/admin_panel
           
 
     - name: Configure AWS credentials
