--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -46,14 +46,16 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     # environment: production
-    defaults:
-      run:
-        working-directory: admin_panel
+    # defaults:
+    #   run:
+    #     working-directory: admin_panel
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-          
+    - name: Change admin panel dir
+      working-directory: ./admin_panel
+      run: cp . . 
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
