--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -55,7 +55,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Change admin panel dir
       # working-directory: ./admin_panel
-      run: cd admin_panel
+      run: cd zay_chin_clone_app/admin_panel
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
