--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -53,9 +53,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Change admin panel dir
+    # - name: Change admin panel dir
       # working-directory: ./admin_panel
-      run: cd zay_chin_clone_app/admin_panel
+      # run: cd zay_chin_clone_app/admin_panel
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -73,10 +73,12 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
+    - name: Change working dir
       run: |
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
+        cd zay_chin_clone_app/admin_panel
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
