--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -73,7 +73,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
-    - name: Change working dir
+  #  - name: Change working dir
       run: |
         # Build a docker container and
         # push it to ECR so that it can
