--- a/.github/workflows/api-server.yml
+++ b/.github/workflows/api-server.yml
@@ -32,30 +32,50 @@ on:
       - main
 
 env:
-  AWS_REGION: ap-southeast-1                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: api-server           # set this to your Amazon ECR repository name
-  ECS_SERVICE: api-server-service                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: zaywal-cluster2                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: ./zay_chin_clone_app/api-server/task-definition.json # set this to the path to your Amazon ECS task definition
-                                               # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: api-server-container           # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
+  AWS_REGION: ap-southeast-1                   
+  ECR_REPOSITORY: api-server           
+  ECS_SERVICE_API: apiservice
+  ECS_SERVICE_MONGO: dbservice
+  ECS_CLUSTER: zaywal-cluster2
+  ECS_TASK_DEFINITION_API: ./zay_chin_clone_app/api-server/api-task-definition.json
+  ECS_TASK_DEFINITION_MONGO: ./zay_chin_clone_app/api-server/mongo-task-definition.json
+  CONTAINER_NAME_API: api-server-container    
+  CONTAINER_NAME_MONGO: mongodb-container
 
 jobs:
-  deploy:
-    name: Deploy
+  deploy-db:
+    name: Deploy MongoDB
     runs-on: ubuntu-latest
-    # environment: production
-    # defaults:
-    #   run:
-    #     working-directory: admin_panel
+
+    steps:
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Deploy Amazon ECS task definition
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        # task-definition: ${{ steps.task-def.outputs.task-definition }}
+        task-definition: ${{ env.ECS_TASK_DEFINITION_MONGO }}
+        service: ${{ env.ECS_SERVICE_MONGO }}
+        cluster: ${{ env.ECS_CLUSTER }}
+        wait-for-service-stability: true
+  
+  deploy-api:
+    needs: deploy-db
+    name: Deploy Api
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    # - name: Change admin panel dir
-      # working-directory: ./admin_panel
-      # run: cd zay_chin_clone_app/admin_panel
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -73,7 +93,6 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
-  #  - name: Change working dir
       run: |
         # Build a docker container and
         # push it to ECR so that it can
@@ -87,7 +106,7 @@ jobs:
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: ${{ env.ECS_TASK_DEFINITION }}
+        task-definition: ${{ env.ECS_TASK_DEFINITION_API }}
         container-name: ${{ env.CONTAINER_NAME }}
         image: ${{ steps.build-image.outputs.image }}
 
@@ -95,6 +114,6 @@ jobs:
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: ${{ env.ECS_SERVICE }}
+        service: ${{ env.ECS_SERVICE_API }}
         cluster: ${{ env.ECS_CLUSTER }}
         wait-for-service-stability: true
