--- a/.github/workflows/admin-panel.yml
+++ b/.github/workflows/admin-panel.yml
@@ -34,7 +34,7 @@ on:
 env:
   AWS_REGION: ap-southeast-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: zaywal-admin-panel           # set this to your Amazon ECR repository name
-  ECS_SERVICE: admin-panel-service                 # set this to your Amazon ECS service name
+  ECS_SERVICE: adminpanelservice                 # set this to your Amazon ECS service name
   ECS_CLUSTER: zaywal-cluster2                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: ./zay_chin_clone_app/admin_panel/task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
