--- a/zay_chin_clone_app/admin_panel/pubspec.yaml
+++ b/zay_chin_clone_app/admin_panel/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   build_runner: ^2.1.4
   json_annotation: ^4.3.0
   image_picker:
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
