--- a/.github/workflows/admin-panel.yml
+++ b/.github/workflows/admin-panel.yml
@@ -28,8 +28,10 @@ name: Deploy Admin Panel to Amazon ECS
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - "**"
+    # branches:
+    #   - main
 
 env:
   AWS_REGION: ap-southeast-1                   # set this to your preferred AWS region, e.g. us-west-1
