--- a/zay_chin_clone_app/admin_panel/Dockerfile
+++ b/zay_chin_clone_app/admin_panel/Dockerfile
@@ -18,6 +18,7 @@ RUN flutter doctor -v
 # Enable flutter web
 RUN flutter channel stable
 RUN flutter upgrade
+RUN flutter pub upgrade
 RUN flutter config --enable-web
 
 # Copy files to container and build
